choose winner modal is no longer squished at the bottom

--- a/app/assets/stylesheets/z_teacher_gameplay.scss
+++ b/app/assets/stylesheets/z_teacher_gameplay.scss
@@ -8,7 +8,6 @@
 #next-turn,
 #roster {
   display: inline-block;
-  position: relative;
 }
 
 .group-link {
@@ -29,9 +28,7 @@ span.group-name {
 }
 
 .choose-winner {
-  position: absolute;
-  top: 1.8rem;
-  right: 0.5rem;
+
 }
 
 .edit-score-container {
